# SpaceCraft

./: .gitmodules  CMakeLists.txt  README.md  spacecraft.sln
cmake/: CMakeLists.txt  COFFEE3rdPartySettings.cmake  COFFEE3rdPartySettings.cmake.orig  COFFEEAscentSettings.cmake  COFFEEGetBuildVersion.cmake  COFFEEICC.cmake  COFFEEInfrastructureSettings.cmake  COFFEESettings.cmake  COFFEESgfSettings.cmake  COFFEEUtilities.cmake  FindVortexcore.cmake
cmake/scripts/: build.bat  build.sh  create.bat  create.sh
spacecraft/: CMakeLists.txt  update_dlls.bat
spacecraft/doc/: ReadMe.txt
spacecraft/include/: GameLogger.h
spacecraft/src/: SceneTest.cpp  SceneTest.h  SpaceCraft.cpp
vortexcore/: CMakeLists.txt  update_3rdparty.bat
vortexcore/cmake/: AddDeps.cmake  FindGLI.cmake  FindGLM.cmake  FindSteamAudio.cmake  Findprotobuf.cmake
vortexcore/doc/: ReadMe.txt
vortexcore/include/VortexCore/: Aggregate.h  AlignedStorage.h  Api.h  AppWindow.h  CameraComponent.h  CommandQueue.h  Component.h  ComponentContainer.h  Delegate.h  ForwardDecls.h  Game.h  Interface.h  Logger.h  Material.h  MeshComponent.h  QueryProgress.h  RenderContext.h  Scene.h  SceneGraph.h  SceneManager.h  SceneObject.h  ScopedTimer.h  ScopedWaitTimer.h  Screen.h  SystemLogger.h  ThreadContext.h  ThreadMap.h  Transform.h  TransformCache.h  VortexCore.h  VtAggregate.h  VtInterface.h
vortexcore/include/VortexCore/private/: Camera.h  Frustum.h  Mesh.h  RenderContextVulkan.h  ShaderVulkan.h  SwapchainVulkan.h  VkErrorHelper.h
vortexcore/include/VortexCore/test/: VkTriangle.cpp  VkTriangle.h
vortexcore/include/VortexCore/win32/: OSAppWindow.h
vortexcore/shader/: default.frag  default.frag.spv  default.vert  default.vert.spv  generate-spirv.bat
vortexcore/shader/test/: vktriangle.frag  vktriangle.vert.spv
vortexcore/src/: AppWindow.cpp  Camera.cpp  CameraComponent.cpp  Component.cpp  Frustum.cpp  Game.cpp  Material.cpp  Mesh.cpp  MeshComponent.cpp  RenderContext.cpp  RenderContextVulkan.cpp  Scene.cpp  SceneGraph.cpp  SceneManager.cpp  SceneObject.cpp  Screen.cpp  ShaderVulkan.cpp  SwapchainVulkan.cpp  TransformCache.cpp  VortexCore.cpp
vortexcore/src/win32/: OSAppWindow.cpp
vortexed/: VortexEd.cpp
vortexed/doc/: ReadMe.txt
